...
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_dashboard_fragment_username">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/admin_switch_organizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:thumbTint="@color/purple_500"
            app:trackTint="@color/purple_200" />

...
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red"
        android:clickable="true"
        android:text="Delete"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
...
